--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18304 2018/04/29 09:44:02 wiz Exp $
+$NetBSD: TODO,v 1.18305 2018/04/29 09:44:49 wiz Exp $
 
 Suggested new packages
 ======================
@@ -402,6 +402,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ap22-authnz-external-3.3.2
 	o ap22-limitipconn-0.24
 	o ap22-vhost-ldap-2.4.0
+	o apache-ant-1.10.3
 	o apache-ivy-2.4.0
 	o apollo-1.7
 	o apr0-2.4.1
@@ -1025,6 +1026,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o makeself-2.2.0
 	o maketool-0.8.4
 	o makeztxt-1.60
+	o mame-0.197
 	o manedit-1.2.1
 	o mapserver-7.0.1
 	o matchbox-panel-0.9.3
@@ -1083,6 +1085,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o munin-server-1.4.6
 	o mupdf-1.13.0 [leot, wip]
 	o muse-0.9.2
+	o musicpd-0.20.19
 	o myodbc-5.3.4
 	o mysql-server-8.0
 	o mysql-workbench-6.3
@@ -1101,6 +1104,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o newmail-1.0.2
 	o nginx-1.14.0
 	o nginx-devel-1.13.9
+	o notmuch-0.26.2
 	o nqp-2016.02
 	o ns-3.14.1
 	o ns-plugger-common-5.1.3
@@ -1203,6 +1207,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o policyd-weight-0.1.15.2
 	o polsms-2.1.0
 	o poppass-4.0.14
+	o poppler-data-0.4.9
 	o posh-0.12.6
 	o postal-0.72
 	o pound-2.8a
@@ -1233,8 +1238,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-doctor-15.1.0
 	o py-ephem3-3.7.6.0
 	o py-gnome-menus-3.8.0
+	o py-google-api-python-client-1.6.7
 	o py-hgview-1.9.0
 	o py-hsm-1.1.1
+	o py-html5-parser-0.4.5
 	o py-input-pad-1.4.2
 	o py-keybinder-0.3.1
 	o py-musicbrainz-0.7.4
@@ -1242,8 +1249,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-newt-0.52.20
 	o py-omniORBpy-3.7
 	o py-pendrell-0.3.7
+	o py-postgresql-5.0.5
 	o py-ptt-1.10.2
 	o py-pycountry-1.20
+	o py-setuptools-39.1.0
 	o py-simpletal-5.1
 	o py-smb-1.1.17
 	o py-spf-2.0.12t
@@ -1486,6 +1495,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o windowlab-1.40
 	o wine-3.0
 	o wine-devel-3.7
+	o wireshark-2.6.0
 	o wmi-11
 	o wmii+ixp-3.9.2 [pkg/43459; wip (wmii-devel); see also libixp entry]
 	o wmx-8
