--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18573 2018/10/01 12:37:23 ryoon Exp $
+$NetBSD: TODO,v 1.18574 2018/10/01 15:54:09 nia Exp $
 
 Suggested new packages
 ======================
@@ -483,7 +483,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o chicken-4.13.0 [pkg/52929]
 	o chimera-1.30a
 	o chromium-bsu-0.9.16.1
-	o chrony-3.3
 	o cim-5.1
 	o cinepaint-1.3
 	o cjk-lyx-1.4.4
