--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18574 2018/10/01 15:54:09 nia Exp $
+$NetBSD: TODO,v 1.18575 2018/10/01 17:45:18 adam Exp $
 
 Suggested new packages
 ======================
@@ -996,7 +996,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libtcl-nothread-8.5.1
 	o libtecla-1.6.3
 	o libtrace-3.0.22
-	o libuv-1.23.1
 	o libv4l-0.8.5
 	o libvirt-2.3
 	o libxcb-1.13.1
@@ -1266,7 +1265,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o qlandkartegt-1.8.1 [pkg/53376]
 	o qnetwalk-1.4
 	o qt4-creator-3.4.0
-	o qt5-5.11.2
 	o quodlibet2-3.5.3
 	o radare2-2.8.0
 	o radiance-4R1
