--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18576 2018/10/02 08:47:12 adam Exp $
+$NetBSD: TODO,v 1.18577 2018/10/02 11:29:27 nia Exp $
 
 Suggested new packages
 ======================
@@ -1005,7 +1005,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o licq-1.3.8
 	o lilv-0.22.0
 	o lincvs-2.1.4 [now called CrossVC]
-	o links-2.17
 	o linpsk-1.2 [ld: cannot find -lqt-mt with qt4]
 	o liquidwar-6.0.0.11
 	o lirc-0.9.3
