--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18578 2018/10/03 22:27:18 nia Exp $
+$NetBSD: TODO,v 1.18579 2018/10/07 07:03:07 adam Exp $
 
 Suggested new packages
 ======================
@@ -1245,7 +1245,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-musicbrainz-0.7.4
 	o py-newt-0.52.20
 	o py-omniORBpy-3.7
-	o py-packaging-18.0
 	o py-pendrell-0.3.7
 	o py-postgresql-5.0.6
 	o py-ptt-1.10.2
