--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18580 2018/10/07 09:27:04 adam Exp $
+$NetBSD: TODO,v 1.18581 2018/10/07 10:52:46 schmonz Exp $
 
 Suggested new packages
 ======================
@@ -583,7 +583,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ess-15.09
 	o et-2.60
 	o etach-1.4.1
-	o etckeeper-1.18.7
 	o eterm-0.9.6
 	o etm-3.0.43 [wip/py-etmtk]
 	o etm-891
