--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18583 2018/10/08 00:00:37 ryoon Exp $
+$NetBSD: TODO,v 1.18584 2018/10/08 12:05:39 sborrill Exp $
 
 Suggested new packages
 ======================
@@ -866,7 +866,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ispell-ga-4.6
 	o ispell-ru-0.99g5
 	o ispell-ru-io-0.99g5
-	o istgt-20150713
 	o iwi-firmware3-3.1
 	o ja-grep-2.9
 	o ja-less-451
