--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18584 2018/10/08 12:05:39 sborrill Exp $
+$NetBSD: TODO,v 1.18585 2018/10/08 14:49:17 adam Exp $
 
 Suggested new packages
 ======================
@@ -1229,7 +1229,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-augeas-1.0.3
 	o py-cassa-1.11.0
 	o py-cssselect2-0.2.1
-	o py-django2-2.1.2
 	o py-doctor-15.1.0
 	o py-ephem3-3.7.6.0
 	o py-gnome-menus-3.8.0
