--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18585 2018/10/08 14:49:17 adam Exp $
+$NetBSD: TODO,v 1.18586 2018/10/09 12:21:47 leot Exp $
 
 Suggested new packages
 ======================
@@ -1039,7 +1039,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o mcsim-5.6.5
 	o mecab-ipadic-2.7.0.20070801
 	o mednafen-1.21.1
-	o megatools-1.9.97
 	o memached-1.5.6
 	o mergeant-0.67
 	o merkaator-0.18.2
