--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18586 2018/10/09 12:21:47 leot Exp $
+$NetBSD: TODO,v 1.18587 2018/10/09 15:21:54 abs Exp $
 
 Suggested new packages
 ======================
@@ -1452,7 +1452,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o varnish-6.0
 	o varnish-5.1.3
 	o vbetool-1.1
-	o vcdimager-0.7.24
 	o vera-1.23
 	o veusz-1.26.1
 	o vfu-4.09
