--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18587 2018/10/09 15:21:54 abs Exp $
+$NetBSD: TODO,v 1.18588 2018/10/10 20:10:31 maya Exp $
 
 Suggested new packages
 ======================
@@ -1101,7 +1101,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o newmail-1.0.2
 	o nginx-devel-1.13.9
 	o nickle-2.82
-	o nqp-2016.02
 	o ns-3.14.1
 	o ns-plugger-common-5.1.3
 	o ntop-5.0
