--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19226 2019/08/28 10:11:25 leot Exp $
+$NetBSD: TODO,v 1.19227 2019/08/30 14:00:23 nia Exp $
 
 Suggested new packages
 ======================
@@ -1011,7 +1011,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o modular-xorg-xquartz-1.18.0
 	o molden-4.8 [after which PR 40252 can be closed]
 	o molden-5.5
-	o monit-5.17
 	o mono-5.2
 	o mono-nat-1.1.0
 	o mono-tools-4.2
