--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19229 2019/08/31 13:17:48 nia Exp $
+$NetBSD: TODO,v 1.19230 2019/09/01 08:42:56 wiz Exp $
 
 Suggested new packages
 ======================
@@ -387,7 +387,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o GMT-5.1.1
 	o GNUMail-1.2.2
 	o Gorm-1.2.22
-	o ImageMagick-7.0.8.62
+	o ImageMagick-7.0.8.63
 	o JBidwatcher-2.5.6 [wants launch4j]
 	o LPRng-core-3.8.35
 	o OdfConverter-4.0
@@ -399,7 +399,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o R-ncdf-1.6.8
 	o SOGo-4.0.7
 	o SOPE-4.0.7
-	o Sigil-0.9.16 [needs QtWebEngine]
+	o Sigil-0.9.17 [needs QtWebEngine]
 	o TiffIO-140a
 	o YoSucker-81
 	o abcmidi-20170416
@@ -472,6 +472,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o binkd-1.04
 	o binutils-2.31
 	o bird6-1.5.0
+	o blender-2.80
 	o bliz++-0.10
 	o blur6ex-0.3.462
 	o bmkdep-20140112
@@ -495,6 +496,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o catdoc-1.1
 	o catdoc-tk-1.1
+	o cbindgen-0.9.1
 	o cddbd-1.5.2
 	o cdrkit-1.1.10
 	o cfengine3-3.10.2
@@ -834,6 +836,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o htmldoc-1.8.28
 	o http_load-20140814
 	o hugo-0.57.1 [needs gocloud.dev]
+	o i3-4.17.1
 	o icbirc-2.0
 	o icc11-13.0
 	o icdprog-0.5
@@ -911,6 +914,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libICE-1.0.10
 	o libX11-1.6.8
 	o libXt-1.2.0 [https://lists.x.org/archives/xorg/2019-June/059825.html]
+	o libarchive-3.4.0
 	o libbpg-0.9.6
 	o libcaca-0.99.19
 	o libcarddav-14.0.4
@@ -935,6 +939,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libmediawiki-4.14.0
 	o libmilter-8.16.0.16
 	o libmtag-0.3.6
+	o libogg-1.3.4
 	o liboobs-2.32.0
 	o liboop-1.0.1
 	o libpciaccess-0.16
@@ -953,6 +958,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libykneomgr-0.1.8
 	o libyubikey-1.13
 	o lincvs-2.1.4 [now called CrossVC]
+	o links-2.20
 	o linpsk-1.2 [ld: cannot find -lqt-mt with qt4]
 	o liquidwar-6.0.0.11
 	o lirc-0.9.3
@@ -1103,6 +1109,9 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o php-tiki6-6.14
 	o php-tt-rss-1.15.3
 	o php-tt-rss-fever-plugin-1.4.7
+	o php71-7.1.32
+	o php72-7.2.22
+	o php73-7.3.9
 	o phraseanet-3.8.6
 	o phraseanet-indexer-3.8.6
 	o picocom-3.0
@@ -1389,6 +1398,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o xauth-1.1
 	o xbacklight-1.2.3
 	o xbiff-1.0.4
+	o xcb-util-0.4.1
 	o xclock-1.0.9
 	o xcoral-3.14
 	o xerces-j-2.4.0 [pkg/21725]
