--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19231 2019/09/01 11:08:34 leot Exp $
+$NetBSD: TODO,v 1.19232 2019/09/01 11:14:54 nia Exp $
 
 Suggested new packages
 ======================
@@ -1014,7 +1014,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o modular-xorg-xquartz-1.18.0
 	o molden-4.8 [after which PR 40252 can be closed]
 	o molden-5.5
-	o mono-5.2
 	o mono-nat-1.1.0
 	o mono-tools-4.2
 	o mono-xsp-4.2
