--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19234 2019/09/01 12:08:28 nia Exp $
+$NetBSD: TODO,v 1.19235 2019/09/01 13:06:57 taca Exp $
 
 Suggested new packages
 ======================
@@ -1106,9 +1106,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o php-tiki6-6.14
 	o php-tt-rss-1.15.3
 	o php-tt-rss-fever-plugin-1.4.7
-	o php71-7.1.32
-	o php72-7.2.22
-	o php73-7.3.9
 	o phraseanet-3.8.6
 	o phraseanet-indexer-3.8.6
 	o picocom-3.0
