--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19235 2019/09/01 13:06:57 taca Exp $
+$NetBSD: TODO,v 1.19236 2019/09/02 08:33:47 adam Exp $
 
 Suggested new packages
 ======================
@@ -1173,7 +1173,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-sybase-0.37
 	o py-wxWidgets-4.0.0
 	o py-yubiauth-0.3.10
-	o py-zipp-0.6.0
 	o pythontidy-1.23
 	o qbzr-0.23.2
 	o qdirstat-1.6
