--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19238 2019/09/04 07:57:48 adam Exp $
+$NetBSD: TODO,v 1.19239 2019/09/04 17:35:57 nia Exp $
 
 Suggested new packages
 ======================
@@ -676,7 +676,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o geeqie-1.5.1
 	o genius-1.0.21
 	o gens-2.15.5
-	o gentoo-0.20.4
 	o geoclue-2.1.10
 	o gfract-0.33
 	o ghc-8.2
