--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19240 2019/09/04 22:39:39 nia Exp $
+$NetBSD: TODO,v 1.19241 2019/09/05 08:08:21 nros Exp $
 
 Suggested new packages
 ======================
@@ -1310,7 +1310,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o tellico-2.3.11
 	o tetrinetx-1.40c
 	o tex2page-20130325
-	o texmaker-5.0.2
 	o tfmxplay-1.1.6
 	o thunderbird-enigmail-2.1.2 [needs thunderbird-68.0]
 	o tig-2.2
