--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19253 2019/09/08 20:46:20 leot Exp $
+$NetBSD: TODO,v 1.19254 2019/09/09 12:31:09 tm Exp $
 
 Suggested new packages
 ======================
@@ -1021,9 +1021,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o mpdas-0.4.1
 	o mserv-devel-0.41
 	o multitail-6.4.2
-	o munin-doc-1.4.6
-	o munin-node-1.4.6
-	o munin-server-1.4.6
 	o muse-0.9.2
 	o musicpd-0.21.14
 	o myodbc-5.3.4
