--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19254 2019/09/09 12:31:09 tm Exp $
+$NetBSD: TODO,v 1.19255 2019/09/10 20:12:37 leot Exp $
 
 Suggested new packages
 ======================
@@ -1367,6 +1367,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o warmux-11.04.1
 	o wcalc-2.4
 	o webalizer-2.23.05
+	o webkit-gtk-2.26.0 [leot]
 	o websvn-2.3.3
 	o weewm-0.01
 	o wgetpaste-2.26
