--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19256 2019/09/10 22:18:39 leot Exp $
+$NetBSD: TODO,v 1.19257 2019/09/11 11:41:53 tm Exp $
 
 Suggested new packages
 ======================
@@ -398,7 +398,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o R-mapproj-3
 	o R-ncdf-1.6.8
 	o SOGo-4.0.7
-	o SOPE-4.0.7
 	o Sigil-0.9.17 [needs QtWebEngine]
 	o TiffIO-140a
 	o YoSucker-81
