--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19258 2019/09/11 12:05:45 tm Exp $
+$NetBSD: TODO,v 1.19259 2019/09/11 23:38:07 gutteridge Exp $
 
 Suggested new packages
 ======================
@@ -1073,7 +1073,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o pam-krb5-4.7
 	o pam-passwdqc-1.3.0
 	o pam-yubico-2.21
-	o pango-1.44.6
 	o paragui-1.1.8
 	o pari-2.11.2
 	o parrot-7.11.0
