--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19259 2019/09/11 23:38:07 gutteridge Exp $
+$NetBSD: TODO,v 1.19260 2019/09/12 15:56:43 nros Exp $
 
 Suggested new packages
 ======================
@@ -1033,7 +1033,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o nessus-4.4.1
 	o netbt-hcidump-5.37
 	o nethack-3.6.2
-	o netsurf-3.9
 	o netio-1.32
 	o netramet-50
 	o newmail-1.0.2
